objects/PMC_DH_StatusCodeMessageMapping__mdt.object
<CustomObject>
    <description>This metadata will be used for mapping Status code with Message with respect to Modules</description>
    <fields>
        <fullName>strMessageCustomLabelApiName__c</fullName>
        <label>Message (Custom Label API Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strModule__c</fullName>
        <label>Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strStatusCode__c</fullName>
        <label>Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PMC DH StatusCodeMessageMapping</label>
    <pluralLabel>PMC DH StatusCodeMessageMappings</pluralLabel>
</CustomObject>